--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "docs": "markdown-folder-to-html til_docs && npm run postProcess && cp WebsiteError.html _til_docs",
     "serve": "serve _til_docs",
-    "postProcess": "node postProcessHtml.js"
+    "postProcess": "node postProcessHtml.js",
+    "lint": "node lint.js"
   },
   "devDependencies": {
     "markdown-folder-to-html": "^2.4.0",
